# AtMyCommand

./: .gitignore  CMakeLists.txt  LICENSE  README.md  local_config_template.cmake
src/: main.cpp
src/client/: client_main.cpp  client_main.h  rendering.cpp  rendering.h
src/client/rendering/: rendering.cpp  rendering.h
src/shader/: shader.hlsl
